--- a/index.html
+++ b/index.html
@@ -14,28 +14,48 @@
     <div class="page">
       <!-- 헤더 -->
       <header class="nav">
-        <div class="logo">n8n</div>
-        <div class="tag-pill">내가 쓰는 노코드 자동화 비서</div>
+        <div class="nav-left">
+          <div class="logo">n8n</div>
+          <span class="nav-badge">Workflow Studio</span>
+        </div>
+        <nav class="nav-links">
+          <a href="#features">기능</a>
+          <a href="#usecases">사용 사례</a>
+          <a href="#about">소개</a>
+        </nav>
+        <div class="nav-right">
+          <a
+            href="https://github.com/habitree/n8n"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="nav-link-ghost"
+          >
+            GitHub
+          </a>
+          <a href="mailto:hello@your-domain.com" class="btn btn-primary nav-cta"
+            >상담 신청</a
+          >
+        </div>
       </header>
 
       <!-- 한 화면에 담긴 메인 콘텐츠 -->
       <main class="content">
         <!-- 왼쪽: 핵심 카피 / 요약 -->
-        <section class="hero-main" aria-label="n8n 소개">
+        <section class="hero-main" aria-label="n8n 소개" id="features">
           <div>
-            <p class="eyebrow">반복 업무, 디지털 비서에게 맡겨보세요</p>
+            <p class="eyebrow">Run on autopilot</p>
             <h1 class="hero-title">
-              n8n, <span>내 업무를 대신 처리하는</span><br />
-              노코드 자동화 비서
+              n8n, <span>내 일을 대신 돌려주는</span><br />
+              노코드 자동화 운영실
             </h1>
             <p class="hero-sub">
-              구글시트 · 노션 · 슬랙 · 이메일 등 여기저기 흩어진 일을<br />
-              하나의 자동화 플로우로 이어서 처리합니다.
+              구글시트 · 노션 · 슬랙 · 이메일에 흩어진 업무를<br />
+              한 곳에서 설계하고, 자동으로 실행·추적합니다.
             </p>
             <ul class="hero-bullets">
               <li>매일·매주 반복되는 일을 자동으로 실행</li>
               <li>앱과 앱을 연결해 “사이사이 수작업” 제거</li>
-              <li>데이터를 모으고 정리해 나에게 리포트로 전달</li>
+              <li>데이터를 모으고 정리해 요약 리포트로 전달</li>
             </ul>
           </div>
 
@@ -65,26 +85,24 @@
 
         <!-- 오른쪽: 예시 워크플로 + 사용사례 요약 -->
         <aside class="right-panel" aria-label="예시 워크플로와 사용 사례">
-          <section class="window-card">
+          <section class="window-card" id="usecases">
             <div class="window-header">
               <span class="dot red"></span>
               <span class="dot yellow"></span>
               <span class="dot green"></span>
             </div>
             <div class="window-body">
-              <p class="window-title">예시 워크플로</p>
+              <p class="window-title">오늘 n8n이 대신하는 일들</p>
               <ul>
                 <li>폼 응답 → Google Sheet 자동 기록</li>
                 <li>새 메모 → Notion 아이디어 인박스 정리</li>
                 <li>데이터 집계 → 요약 리포트 Slack 알림</li>
               </ul>
-              <p class="window-caption">
-                “사람이 매번 하면 아까운 일”을 n8n이 대신 처리합니다.
-              </p>
+              <p class="window-caption">사람이 매번 하면 아까운 일, n8n이 먼저 처리합니다.</p>
             </div>
           </section>
 
-          <section class="usecase-tags" aria-label="추천 사용 사례">
+          <section class="usecase-tags" aria-label="추천 사용 사례" id="about">
             <div class="usecase-tag">📚 독서/습관 기록 · 정리</div>
             <div class="usecase-tag">🧠 아이디어·콘텐츠 인박스 만들기</div>
             <div class="usecase-tag">📊 데이터 모으기 & 리포트 알림</div>
