--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>n8n – 내가 쓰는 노코드 자동화 비서</title>
+    <title>n8n – 강력한 워크플로우 자동화 플랫폼</title>
     <meta
       name="description"
-      content="n8n으로 반복 업무를 자동화하고, 나만의 디지털 비서팀을 만들어 보세요."
+      content="n8n의 핵심 기능을 한눈에 확인하고, 실제 워크플로우 예시를 통해 자동화의 가능성을 경험하세요."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./styles.css" />
@@ -16,110 +16,153 @@
       <header class="nav">
         <div class="nav-left">
           <div class="logo">n8n</div>
-          <span class="nav-badge">Workflow Studio</span>
-        </div>
-        <nav class="nav-links">
-          <a href="#features">기능</a>
-          <a href="#usecases">사용 사례</a>
-          <a href="#about">소개</a>
-        </nav>
-        <div class="nav-right">
-          <a
-            href="https://github.com/habitree/n8n"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="nav-link-ghost"
-          >
-            GitHub
-          </a>
-          <a href="mailto:hello@your-domain.com" class="btn btn-primary nav-cta"
-            >상담 신청</a
-          >
+          <span class="nav-badge">Workflow Automation</span>
         </div>
       </header>
 
       <!-- 한 화면에 담긴 메인 콘텐츠 -->
       <main class="content">
-        <!-- 왼쪽: 핵심 카피 / 요약 -->
-        <section class="hero-main" aria-label="n8n 소개" id="features">
-          <div>
-            <p class="eyebrow">Run on autopilot</p>
+        <!-- 왼쪽: n8n 소개 및 기능 -->
+        <section class="left-section" aria-label="n8n 소개 및 기능" id="features">
+          <!-- 히어로 섹션을 왼쪽으로 이동 -->
+          <div class="hero-section-left">
+            <p class="eyebrow">Powerful Workflow Automation</p>
             <h1 class="hero-title">
-              n8n, <span>내 일을 대신 돌려주는</span><br />
-              노코드 자동화 운영실
+              n8n의 <span>핵심 기능</span><br />
+              한눈에 보기
             </h1>
             <p class="hero-sub">
-              구글시트 · 노션 · 슬랙 · 이메일에 흩어진 업무를<br />
-              한 곳에서 설계하고, 자동으로 실행·추적합니다.
+              노코드로 복잡한 워크플로우를 구축하고,<br />
+              다양한 서비스와 AI를 연결해 자동화하세요.
             </p>
-            <ul class="hero-bullets">
-              <li>매일·매주 반복되는 일을 자동으로 실행</li>
-              <li>앱과 앱을 연결해 “사이사이 수작업” 제거</li>
-              <li>데이터를 모으고 정리해 요약 리포트로 전달</li>
-            </ul>
-          </div>
-
-          <div>
             <div class="hero-actions">
               <a
-                href="mailto:hello@your-domain.com"
+                href="https://n8n.io/"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="btn btn-primary"
               >
-                내 업무, 자동화 아이디어 받기
+                n8n 페이지 연결
               </a>
               <a
-                href="https://github.com/habitree/n8n"
+                href="https://habitree.io"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="btn btn-secondary"
               >
-                GitHub 워크플로 구경하기
+                habitree.io 서비스 확인하기
               </a>
             </div>
-            <p class="hero-footnote">
-              작은 자동화를 하나씩 쌓다 보면, 어느새
-              <strong>“나만의 디지털 비서팀”</strong>이 생깁니다.
+          </div>
+
+          <div class="intro-card">
+            <h2 class="section-title">n8n이란?</h2>
+            <p class="intro-text">
+              n8n은 기술팀을 위한 강력한 워크플로우 자동화 플랫폼입니다. 드래그 앤 드롭 방식의 직관적인 인터페이스로 복잡한 자동화 워크플로우를 구축할 수 있으며, 필요시 코드를 직접 작성할 수도 있습니다.
             </p>
+          </div>
+
+          <div class="features-grid">
+            <div class="feature-card">
+              <div class="feature-icon">🔗</div>
+              <h3 class="feature-card-title">500+ 서비스 통합</h3>
+              <p class="feature-card-text">
+                Notion, Slack, Google Sheets, GitHub, MySQL, PostgreSQL 등 수백 개의 서비스와 API를 쉽게 연결할 수 있습니다.
+              </p>
+            </div>
+
+            <div class="feature-card">
+              <div class="feature-icon">🤖</div>
+              <h3 class="feature-card-title">AI 에이전트 구축</h3>
+              <p class="feature-card-text">
+                OpenAI, Claude 등 다양한 LLM을 워크플로우에 통합하여 지능형 자동화 시스템을 만들 수 있습니다.
+              </p>
+            </div>
+
+            <div class="feature-card">
+              <div class="feature-icon">⚙️</div>
+              <h3 class="feature-card-title">조건부 로직 및 루프</h3>
+              <p class="feature-card-text">
+                IF/ELSE 분기, 반복 처리, 데이터 필터링 등 복잡한 비즈니스 로직을 구현할 수 있습니다.
+              </p>
+            </div>
+
+            <div class="feature-card">
+              <div class="feature-icon">🔄</div>
+              <h3 class="feature-card-title">데이터 변환</h3>
+              <p class="feature-card-text">
+                JSON, XML 변환 및 데이터 매핑을 통해 다양한 형식의 데이터를 유연하게 처리합니다.
+              </p>
+            </div>
+
+            <div class="feature-card">
+              <div class="feature-icon">⏰</div>
+              <h3 class="feature-card-title">스케줄링 및 트리거</h3>
+              <p class="feature-card-text">
+                시간 기반 스케줄, 웹훅, 이메일, 파일 변경 등 다양한 트리거로 자동화를 시작할 수 있습니다.
+              </p>
+            </div>
+
+            <div class="feature-card">
+              <div class="feature-icon">💻</div>
+              <h3 class="feature-card-title">코드와 UI의 결합</h3>
+              <p class="feature-card-text">
+                JavaScript나 Python 코드를 직접 작성하거나, npm/Python 라이브러리를 사용하여 더 강력한 기능을 구현할 수 있습니다.
+              </p>
+            </div>
+
+            <div class="feature-card">
+              <div class="feature-icon">🐳</div>
+              <h3 class="feature-card-title">셀프 호스팅</h3>
+              <p class="feature-card-text">
+                Docker를 통해 자체 서버에 배포하거나 클라우드 버전을 사용할 수 있어 데이터 보안과 유연성을 모두 확보할 수 있습니다.
+              </p>
+            </div>
           </div>
         </section>
 
-        <!-- 오른쪽: 예시 워크플로 + 사용사례 요약 -->
-        <aside class="right-panel" aria-label="예시 워크플로와 사용 사례">
-          <section class="window-card" id="usecases">
+        <!-- 오른쪽: 워크플로우 참고자료 + 기능 요약 -->
+        <aside class="right-panel" aria-label="워크플로우 예시와 기능 요약">
+          <section class="window-card" id="workflow" style="margin-top: 0;">
             <div class="window-header">
               <span class="dot red"></span>
               <span class="dot yellow"></span>
               <span class="dot green"></span>
             </div>
             <div class="window-body">
-              <p class="window-title">오늘 n8n이 대신하는 일들</p>
+              <p class="window-title">📋 실제 워크플로우 예시</p>
+              <p style="font-size: 12px; color: #6b7280; margin-bottom: 10px;">
+                <strong>Notion + Naver API + AI Agent 자동화</strong>
+              </p>
               <ul>
-                <li>폼 응답 → Google Sheet 자동 기록</li>
-                <li>새 메모 → Notion 아이디어 인박스 정리</li>
-                <li>데이터 집계 → 요약 리포트 Slack 알림</li>
+                <li><strong>1. 트리거:</strong> Notion 데이터베이스에서 빈 항목 감지</li>
+                <li><strong>2. 데이터 처리:</strong> 항목별로 분리 및 JSON 변환</li>
+                <li><strong>3. 외부 API:</strong> Naver 책 검색 API 호출</li>
+                <li><strong>4. AI 처리:</strong> OpenAI 모델로 검색 결과 분석 및 가공</li>
+                <li><strong>5. 업데이트:</strong> 처리된 데이터를 Notion에 자동 업데이트</li>
               </ul>
-              <p class="window-caption">사람이 매번 하면 아까운 일, n8n이 먼저 처리합니다.</p>
+              <p class="window-caption">
+                이 워크플로우는 조건부 분기, 루프, API 호출, AI 에이전트 등 n8n의 핵심 기능을 활용합니다.
+              </p>
             </div>
           </section>
 
-          <section class="usecase-tags" aria-label="추천 사용 사례" id="about">
-            <div class="usecase-tag">📚 독서/습관 기록 · 정리</div>
-            <div class="usecase-tag">🧠 아이디어·콘텐츠 인박스 만들기</div>
-            <div class="usecase-tag">📊 데이터 모으기 & 리포트 알림</div>
+          <section class="usecase-tags" aria-label="주요 기능 태그" id="about">
+            <div class="usecase-tag">🔗 서비스 통합</div>
+            <div class="usecase-tag">🤖 AI 에이전트</div>
+            <div class="usecase-tag">⚡ 자동화 워크플로우</div>
           </section>
+
+          <!-- 작은 워크플로우 이미지 -->
+          <div class="workflow-preview-image">
+            <img src="./node_ex.png" alt="n8n 워크플로우 예시" class="workflow-preview-img" />
+          </div>
         </aside>
       </main>
 
       <!-- 푸터 -->
       <footer class="footer">
-        <span>© 2025 n8n · 내가 쓰는 노코드 자동화 비서</span>
-        <a
-          href="https://github.com/habitree/n8n"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          GitHub 저장소 바로가기
-        </a>
+        <span>© 2025 n8n · 워크플로우 자동화 플랫폼</span>
       </footer>
     </div>
   </body>
